# agent-gov-sec

./: .env.example  .gitignore  Dockerfile  GOVERNANCE_MIGRATION_PLAN.md  README.md  agentic-sdlc.code-workspace  azure-resources.md  main.py  nhi_identity.py  pyproject.toml  requirements.txt  run_scanner.py  run_tracer.py  token_provider.py  trace_ledger.py
.github/: CODEOWNERS
a2a/: __init__.py  dispatcher.py  envelope.py
adapters/: __init__.py  contract.py
adapters/aws/: __init__.py  audit.py  data_fgac.py  gateway.py  identity.py  orchestrator.py  secrets.py  tracing.py
adapters/azure/: __init__.py  audit.py  gateway.py  identity.py  secrets.py  tracing.py
adapters/gcp/: __init__.py  audit.py  gateway.py  identity.py  secrets.py  tracing.py
adapters/langgraph/: __init__.py  _base.py  bedrock_gateway.py  governance.py  runtime.py
adapters/local/: __init__.py  audit.py  egress.yaml
adapters/pydantic_ai/: __init__.py
adapters/raw/: __init__.py
agent_framework_adapters/: __init__.py  contract.py
agent_framework_adapters/langgraph/: __init__.py  _base.py  bedrock_gateway.py  governance.py  runtime.py
agent_framework_adapters/pydantic_ai/: __init__.py
agent_framework_adapters/raw/: __init__.py
agents/: _base.py  analyzer_agent.py  ast_agent.py  classifier_agent.py  coder_agent.py  config.py  discovery_architect_agent.py  discovery_brd_agent.py  discovery_grapher_agent.py  discovery_scanner_agent.py  discovery_stories_agent.py  lambda_analyzer_agent.py  reviewer_agent.py  scanner_agent.py  security_reviewer_agent.py  tester_agent.py
agents/_lib/: bicep_tool.py  compressor.py  file_tools.py  run_logger.py  security_scanner.py  test_runner.py  wave_scheduler.py
agents/ast_parser/: __init__.py  extractor.py
agents/config/: ast_analyzer.yaml  classifier.yaml  coder.yaml  discovery_architect.yaml  discovery_brd.yaml  discovery_grapher.yaml  discovery_scanner.yaml  discovery_stories.yaml  lambda_analyzer.yaml  reviewer.yaml  scanner.yaml  security_reviewer.yaml  tester.yaml
agents/prompts/: ast_analyzer.md  classifier.md  coder.md  coder_dotnet_serverless.md  coder_ecs_docker.md  coder_frontend_spa.md  coder_iac_terraform.md  coder_java_serverless.md  coder_java_spring_boot.md  coder_node_serverless.md  coder_php_web_app.md  coder_typescript_serverless.md  discovery_architect.md  discovery_brd.md  discovery_grapher.md  discovery_scanner.md  discovery_stories.md  lambda_analyzer.md  reviewer.md  scanner.md  security_reviewer.md  tester.md
cloud_adapters/: __init__.py
cloud_adapters/aws/: __init__.py  audit.py  data_fgac.py  egress.yaml  gateway.py  identity.py  orchestrator.py  secrets.py  tracing.py
cloud_adapters/azure/: __init__.py  egress.yaml  gateway.py  identity.py  secrets.py  tracing.py
cloud_adapters/gcp/: __init__.py  agent_engine.py  audit.py  egress.yaml  gateway.py  identity.py  secrets.py  tracing.py
cloud_adapters/local/: __init__.py  audit.py
core/: discovery_artifacts.py  framework_factory.py  interfaces.py  nhi_identity.py  nhi_registry.py  provider_factory.py  run_tracer.py  secrets.py  token_provider.py
docs/: DELTA_OVER_AGENT_OS.md  DELTA_OVER_MSGK.md  GOVERNANCE_MIGRATION_PLAN.md  REFACTOR_AND_GAPS_PLAN.md  adding-an-agent.md  agent-engine.md  architecture-framework-aws.md  architecture-stack.html  architecture.md  aws-deployment-topology.html  aws-guardrail-report.html  azure-resources.md  config-integration-example.md  current-state.md  extended-guardrails.md  governance-authority.md  guardrails-inventory.md  infrastructure-connections.html  infrastructure-connections.md  infrastructure-slide.html  langgraph-demo.md  maf-verification.md  observability-governance-showcase.md  platform-status.md  reference-architecture-mapping.md  reference-architecture-visual.html  requirements-pydantic-note.md  screenshot-manifest.md  services-and-tech.md  standards-crosswalk.md  toolkit-verification.md  user-guide.md  video-demo-script.md
docs/output/: report.html
governance/: enforcement_core.py  floor.py  middleware.py  pipeline.py  policy_registry.py
governance/adapters/: otel_audit_backend.py
governance/configs/: egress-gap.yaml  galaxy-egress.yaml  prompt-injection.yaml
governance/extensions/: __init__.py  circuit_breaker_guard.py  constraint_graph_guard.py  content_quality.py  cost_guard.py  data_classification.py  data_drift.py  data_fgac.py  decision.py  diff_policy_guard.py  egress_guard.py  escalation_guard.py  flags.py  mcp_gateway_guard.py  mcp_message_signer_guard.py  mcp_rate_limit_guard.py  mcp_response_guard.py  mcp_session_guard.py  mcp_substrate.py  mcp_tool_screen.py  memory_guard.py  output_pii.py  policy_engine.py  secure_exec.py  (+6 more)
infra/: aca_jobs.bicep
payload_agents/: __init__.py  _base.py  analyzer_agent.py  auditor_agent.py  config.py  finops_agent.py  framework.py  rogue_agent.py
scripts/: build_narakeet_pptx.py  demo_agents.py  demo_extended_guardrails.py  demo_governance.py  demo_two_agents.py  deploy_agent_engine.py  provision_aca_jobs.sh  report_html.py  run_agent_job.py  run_discovery.py  run_migration.py  run_pipeline.py  run_pipeline_aca.py  run_scanner.py
tests/: README.md  test_a2a_envelope.py  test_analyzer_agent.py  test_ast_extractor.py  test_aws_adapter.py  test_bedrock_gateway.py  test_chokepoints.py  test_coder_agent.py  test_config.py  test_egress.py  test_enforcement_core.py  test_extended_guardrails.py  test_extensions.py  test_floor.py  test_gap_action_safety.py  test_gap_code_quality.py  test_gap_cost_guard.py  test_gap_hitl_transparency.py  test_gap_mcp_percall.py  test_gap_mcp_substrate.py  test_gap_net_resilience.py  test_gap_output_safety.py  test_gap_semantic_policy.py  test_gateway.py  test_guards.py  test_lambda_analyzer_agent.py  test_langgraph_agents.py  test_nhi_registry.py  test_ops_reliability.py  test_ops_supplychain.py  test_policy_registry.py  test_provider_factory.py  test_pydantic_framework.py  test_raw_framework.py  test_repo_classifier.py  test_report_html.py  test_reviewer_agent.py  test_scanner_ast_a2a.py  test_secrets.py  test_security_reviewer_agent.py  (+2 more)
(+92 files in other folders)
