[project]
name = "agentic-sdlc"
version = "0.1.0"
description = "Cloud-agnostic agent governance platform (MSGK-based) with pluggable cloud adapters."
readme = "README.md"
requires-python = ">=3.14"
# Agnostic core: MSGK governance toolkit + OTel SDK + config. No cloud SDK,
# no agent framework — those live in the per-cloud extras below.
dependencies = [
    "agent-os-kernel>=3.2.2",
    "agent-sre==3.2.2",
    "agentmesh-platform>=3.2.2",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-api>=1.27.0",
    "pydantic>=2.0.0,<3",
    "PyYAML>=6.0.1",
]

# Cloud adapters are opt-in. Install the one you target:
#   pip install '.[azure]'   (the only fully implemented provider today)
#   pip install '.[aws]'     (WS5 — skeleton)
#   pip install '.[gcp]'     (WS6 — skeleton)
[project.optional-dependencies]
# Azure cloud bindings + the Microsoft Agent Framework (MAF) glue.
azure = [
    "agent-framework-core>=1.2.0,<2",
    "agent-framework-foundry",
    "azure-identity>=1.19.0",
    "azure-keyvault-secrets>=4.8.0",
    "azure-monitor-opentelemetry-exporter>=1.0.0b50",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
    "asyncpg>=0.29.0",
]
# WS5: boto3, OTel X-Ray/ADOT exporter, DynamoDB/QLDB ledger deps.
aws = []
# WS6: google-auth, google-cloud-secret-manager, Cloud Trace exporter, BigQuery.
gcp = []

[tool.pytest.ini_options]
# The repo's tests only — never recurse into the local-only archive/.
testpaths = ["tests"]
